# WindowsUtilities

./: CMakeLists.txt  Logo.cpp  README.md  Touch.cpp  main.cpp  string_util.cpp  string_util.h
WindowsUtilities.CPP/: CMakeLists.txt  Logo.cpp  NetshPassword.cpp  Touch.cpp  main.cpp  string_util.cpp
WindowsUtilities.CS/: NetshPassword.cs  WindowsUtilities.sln
WindowsUtilities.CS/NetshPassword/: NetshPassword.csproj  Program.cs
WindowsUtilities.CS/NetshPassword/Properties/: AssemblyInfo.cs
WindowsUtilities.PY/: GeoIp.py
